# Mesh2Sim

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: README.md  pyproject.toml
contracts/src/mesh2sim/contracts/: __init__.py  _arrays.py  io.py  schemas.py  types.py  version.py  vocab.py
contracts/tests/: _equality.py  conftest.py  test_correspondence_map.py  test_io_isolation.py  test_roundtrip.py  test_smoke.py  test_validation.py  test_version.py  test_vocab_casing.py
docs/: contracts_spec.md  plan_pipeline_mesh2sim_a_jour.md
golden/: README.md
orchestrator/: README.md
stages/: README.md
stages/anatomical_adapter/: README.md  environment.yml  pyproject.toml
stages/anatomical_adapter/src/mesh2sim_anatomical_adapter/: __init__.py  adapter.py  assembly.py
stages/anatomical_adapter/tests/: conftest.py  example_correspondence_map.json  test_adapter.py  test_assembly.py
stages/biomech_bridge/: README.md
stages/calibration/: README.md
stages/frontend_mhr/: .dockerignore  Dockerfile  README.md  disambiguate_suspects.py  environment.yml  investigate_mhr_params.py  map_204_to_components.py  pyproject.toml
stages/frontend_mhr/reference/: mhr_scale_pca.npz  opensim_model.json
stages/frontend_mhr/results/: 204_to_components.json  disambiguation.json  raw_effects.npz  scaling_mask.json  scaling_mask_v2.json
stages/frontend_mhr/scripts/: extract_scale_pca.py
stages/frontend_mhr/src/mesh2sim_frontend_mhr/: __init__.py  adapter.py  estimator.py  interface.py  mhr_topology.py  shape_lock.py
stages/frontend_mhr/tests/: conftest.py  test_adapter.py  test_estimator_mocked.py  test_integration_gpu.py  test_mhr_topology.py  test_shape_lock.py  test_shape_lock_gpu.py
stages/fusion_multiview/: README.md
stages/targets_2d/: README.md
stages/validation/: README.md
