[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh2sim-contracts"
version = "0.0.1"
description = "Mesh2Sim data contracts: anatomical observations, trajectories, biomech fits. Light deps only (pydantic + numpy)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Florian Delaplace" }]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mesh2sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
